<resources>
    <string name="app_name">Food Bank</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>

    <string name="get_current_location">Get current location</string>
    <string name="food_bank_location_preview">Food bank location preview</string>
    <string name="donate">Donate</string>
    <string name="inquire">Inquire</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="food_bank_load_capacity">Food bank load capacity</string>
    <string name="searchbar_hint">Search for food banks</string>
    <string name="location_image_preview">Location image preview</string>

    <string name="sample_heading">
        Lorem ipsum dolor
    </string>
    <string name="sample_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis felis,
        fermentum at quam at, mattis ullamcorper nulla. Nam vitae felis ut enim rhoncus
        volutpat quis eu magna. Vivamus malesuada ipsum ut elit dictum maximus. Mauris
        sagittis sapien vel mattis imperdiet. Aliquam in est felis. Pellentesque habitant.
    </string>
    <string name="load_capacity">Load Capacity</string>
    <string name="verified_string">Food bank is verified</string>
    <string name="view_details">View details</string>
    <string name="history">History</string>
    <string name="user">User</string>
    <string name="location">Location</string>
    <string name="complete_address">Complete Address</string>
    <string name="food_category">Type of food</string>
    <string name="time">Time</string>
    <string name="datetime_help">Select date and time of pickup</string>
    <string name="food_info_help">Tell us about your food donation</string>
    <string name="submit_donation">Submit Donation</string>
    <string name="user_privacy_assurance">We\'ll never share your personal details.</string>
    <string name="pickup_help">Where do we pick up the food?</string>
    <string name="food_serving">Food serving/s</string>
    <string name="food_bank_name">Food bank name</string>
    <string name="date">Date</string>
    <string name="add_info_help">Lastly, any additional information?</string>
    <string name="add_info_ex">Receiving instructions, notes, etc…</string>
    <string name="notes">Notes</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="pickup_time">Pickup Until</string>
    <string name="food_information">Food Information</string>
    <string name="your_donations">Your Donations</string>
    <string name="inquiry_help">Choose your preferred method of inquiry</string>
</resources>
