<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="26dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/inquiry_help"
        android:textAppearance="?attr/textAppearanceLabelLarge" />

    <!-- Close button for marker annotation view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bank_action_call"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/call"
            app:icon="@drawable/baseline_call_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bank_action_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/email"
            app:icon="@drawable/baseline_mail_24" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bank_action_web"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="4dp"
        android:text="@string/website" />

</LinearLayout>
