<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ptech.foodbank.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_donate_fragment"
            app:destination="@id/navigation_donate" />
        <argument
            android:name="bank"
            android:defaultValue="test"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_donate"
        android:name="com.ptech.foodbank.ui.donate.DonateFragment"
        android:label="fragment_donate"
        tools:layout="@layout/fragment_donate">
        <argument
            android:name="bank"
            android:defaultValue="test"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.ptech.foodbank.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/map_to_donate_fragment"
            app:destination="@id/navigation_donate" />
        <argument
            android:name="bank"
            android:defaultValue="test"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.ptech.foodbank.ui.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ptech.foodbank.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>
