<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginBottom="12dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Bank Preview -->
                <ImageView
                    android:id="@+id/bank_image"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/location_image_preview"
                    android:scaleType="centerCrop" />

                <!-- Close button for marker annotation view -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/close_button"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    android:tint="?attr/colorOnSurfaceInverse"
                    android:visibility="gone"
                    app:elevation="12dp"
                    app:icon="@drawable/baseline_x_48" />

            </RelativeLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/bank_capacity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="10"
                android:tooltipText="@string/food_bank_load_capacity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="18dp">

                <!-- Title, secondary and supporting text -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_heading"
                    android:textAppearance="?attr/textAppearanceTitleLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bank_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_heading"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?android:attr/textColorSecondary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bank_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sample_text"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bank_action_offer"
                    style="?attr/materialButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/default_button_height"
                    android:layout_weight="2"
                    android:text="@string/donate"
                    app:icon="@drawable/baseline_donate_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bank_action"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/default_button_height"
                    android:layout_marginHorizontal="6dp"
                    android:layout_weight="1"
                    android:text="@string/inquire"
                    app:icon="@drawable/baseline_support_24" />


            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</com.google.android.material.card.MaterialCardView>
