<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notif_card"
    style="?attr/materialCardViewOutlinedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/notif_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location_image_preview"
            android:maxHeight="190dp"
            android:minHeight="0dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="22dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notif_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:alpha="0.6"
                android:drawableStart="@drawable/baseline_label_16"
                android:drawableTint="#A5A5A5"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:text="@string/sample_heading"
                android:textColor="?android:attr/textColorSecondary"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/sample_heading"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textFontWeight="700" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notif_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.6"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:text="@string/sample_heading"
                android:textColor="?android:attr/textColorSecondary" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notif_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:paddingHorizontal="12dp"
                android:text="@string/sample_text"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
